crates/rargs/tests/snapshots/test_scripts__impl-190.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] first-option-help.sh upload source -h"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mInvalid option: [33m-h[31m[0m


